--- a/Identity101/appsettings.json
+++ b/Identity101/appsettings.json
@@ -1,6 +1,13 @@
 {
+
   "ConnectionStrings": {
     "con1": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Identity101;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "OutlookSettings": {
+    "SenderMail": "wissen.akademie.test@outlook.com",
+    "Password": "password123456",
+    "Smtp": "smtp-mail.outlook.com",
+    "SmtpPort": 587
   },
 
   "Logging": {
