Some profile functionalites implemented

--- a/Identity101/appsettings.json
+++ b/Identity101/appsettings.json
@@ -9,6 +9,12 @@
     "Smtp": "smtp-mail.outlook.com",
     "SmtpPort": 587
   },
+  "GmailSettings": {
+    "SenderMail": "wissen.akademiee@gmail.com",
+    "Password": "password12345654321",
+    "Smtp": "smtp.gmail.com",
+    "SmtpPort": 587
+  },
 
   "Logging": {
     "LogLevel": {
